@@ -1,9 +1,8 @@
 {
   "450001712305143869": {
     "name": "Colin",
-    "gbp": 250,
-    "achievements": [
-    ],
+    "gbp": 175,
+    "achievements": [],
     "simmerdown": 0,
     "account": 0,
     "loans": {
@@ -46,7 +45,6 @@
         0,
         0,
         0,
-        0,
         250,
         250,
         286,
@@ -54,7 +52,8 @@
         100,
         100,
         250,
-        250
+        250,
+        175
       ],
       "week": [
         0,
@@ -113,7 +112,7 @@
         0,
         0,
         0,
-        0,
+        1676.25,
         1676.25,
         1676.25,
         1676.25,
@@ -204,7 +203,7 @@
         0,
         0,
         0,
-        0,
+        5002,
         5002,
         5002,
         5002,
@@ -292,7 +291,7 @@
         0,
         0,
         0,
-        0,
+        256,
         256,
         256,
         256,
@@ -387,7 +386,7 @@
         0,
         0,
         0,
-        0,
+        1825.4,
         1825.4,
         1825.4,
         1825.4,
@@ -459,7 +458,7 @@
         0,
         0,
         0,
-        0,
+        844.41,
         844.41,
         844.41,
         844.41,
@@ -533,7 +532,7 @@
         0,
         0,
         0,
-        0,
+        179.65,
         179.65,
         179.65,
         179.65,
@@ -612,7 +611,7 @@
         0,
         0,
         0,
-        0,
+        11165.3,
         11165.3,
         11165.3,
         11165.3,
@@ -682,7 +681,7 @@
         0,
         0,
         0,
-        0,
+        1838.5,
         1838.5,
         1838.5,
         1838.5,
@@ -746,7 +745,7 @@
         0,
         0,
         0,
-        0,
+        880.5,
         880.5,
         880.5,
         880.5,
@@ -815,7 +814,7 @@
         0,
         0,
         0,
-        0,
+        1320,
         1320,
         1320,
         1320,
@@ -883,7 +882,7 @@
         0,
         0,
         0,
-        0,
+        308,
         308,
         308,
         308,
@@ -986,7 +985,7 @@
         0,
         0,
         0,
-        0,
+        5162.14,
         5162.14,
         5162.14,
         5162.14,
@@ -1052,7 +1051,7 @@
         0,
         0,
         0,
-        0,
+        2525,
         2525,
         2525,
         2525,
@@ -1116,7 +1115,7 @@
         0,
         0,
         0,
-        0,
+        532,
         532,
         532,
         532,
@@ -1194,7 +1193,7 @@
         0,
         0,
         0,
-        0,
+        556,
         556,
         556,
         556,
@@ -1264,7 +1263,7 @@
         0,
         0,
         0,
-        0,
+        2283.5,
         2283.5,
         2283.5,
         2283.5,
@@ -1331,7 +1330,7 @@
         0,
         0,
         0,
-        0,
+        792,
         792,
         792,
         792,
@@ -1399,7 +1398,7 @@
         0,
         0,
         0,
-        0,
+        1848,
         1848,
         1848,
         1848,
