@@ -7,8 +7,8 @@
     "bj_losses": 106,
     "gg_wins": 0,
     "gg_losses": 1,
-    "total_msgs": 2729,
-    "total_commands": 1876,
+    "total_msgs": 2730,
+    "total_commands": 1877,
     "achievements": 0,
     "farm_messages": 241,
     "non_farm_messages": 612,
